# flashtext2

./: .gitignore  Cargo.toml  README.md  flashtext2.pyi  local_run.py  profile.html  profile.json  pyproject.toml
.github/workflows/: build_and_upload_binaries.yml  ci.yml  docs.yml  tests.yml
benchmarks/: benchmark_extract.py  benchmark_replace.py  trie[char]-nosplit.csv  utils.py
benchmarks/extract/: run.sh
flashtext2/: __init__.py  __init__.pyi  exceptions.py  extract_keywords.c  extract_keywords.cp310-win_amd64.pyd  extract_keywords.html  extract_keywords.pyx  keyword_processor.py  trie_dict.py  utils.py
flashtext2 (cython)/: main.py  profile.html  profile.json  pyproject.toml
flashtext2 (cython)/benchmarks/: benchmark_extract.py  benchmark_replace.py  benchmark_sentence_split.py  cy_split.c  cy_split.cpp  cy_split.html  cy_split.pyx
flashtext2 (cython)/flashtext_cy/: __init__.py  keyword_processor.c  keyword_processor.cp310-win_amd64.pyd  keyword_processor.cpp  keyword_processor.html  keyword_processor.pyi  keyword_processor.pyx
flashtext2 (cython)/tests/: test_extractor.py
src/: flashtext2_rs.rs  lib.rs
src/flashtext2/: __init__.py  exceptions.py  keyword_processor.py  trie_dict.py  utils.py
tests/: test_extractor.py  test_keyword_processor.rs  test_trie_dict.py
tests/python/: _keyword_extractor_test_cases.json  test_extractor.py  test_keyword_processor.py  test_trie_dict.py  test_utils.py
