[tool.poetry]
name = "flashtext2"
version = "0.1.0"
description = "A package for extracting keywords from large text very quickly (much faster than regex and the original flashtext package)"
authors = ["Shneor Elmaleh <770elmo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flashtext2", from = "src"}]
repository = 'https://github.com/shner-elmo/flashtext2'

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
pytest = "^7.2.1"
flashtext = "^2.7"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
pdoc = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
