[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "flashtext2"
requires-python = ">=3.8"
version = "1.0.0"
description = "A package for extracting keywords from large text very quickly (much faster than regex and the original flashtext package"
authors = [
  { name = "Shneor E.", email = "770elmo@gmail.com" },
]

license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
#dependencies = [
#  "httpx",
#  "gidgethub[httpx]>4.0.0",
#  "django>2.1; os_name != 'nt'",
#  "django>2.0; os_name == 'nt'"
#]
[project.optional-dependencies]
test = [
    "coverage>=7.2.1",
    "pytest>=7.2.1",
]
benchmark = [
    "flashtext>=2.7",
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.coverage.report]
# skip_covered = true
# show_missing = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
